# termivoxed

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PROXY_SETUP.md  QUICK_START.md  README.md  check_dependencies.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.py  setup.sh  test_voices.py
PlantUML/: 03_create_project.puml  06_edit_segment.puml  09_export_video.puml  10_project_settings.puml  README.md
PlantUML/puml/: 01_application_startup.puml  02_main_menu.puml  03_create_project.puml  04_open_project.puml  05_add_segment.puml  07_delete_segment.puml  08_generate_voiceovers.puml  09.1_export_video_part1.puml  09.2_export_video_part2.puml  11_list_projects.puml  12_save_project.puml  13_exit_application.puml  14_video_management.puml  complete_system_flow.puml
backend/: __init__.py  ffmpeg_utils.py  subtitle_utils.py  tts_service.py
core/: __init__.py  export_pipeline.py  video_combiner.py
models/: __init__.py  project.py  segment.py  timeline.py  video.py
reference/: FFmpeg_Video_Generation_Documentation.md  TTS_System_Documentation.md
test/: README.md  __init__.py  test_tts_service.py
ui/: __init__.py
utils/: __init__.py  file_picker.py  font_manager.py  google_fonts.py  logger.py  voice_selector.py
