[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termivoxed"
version = "1.0.0"
description = "AI voice-over dubbing tool for content creators - Add professional voice-overs and styled subtitles to videos without recording your own voice"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU AGPL v3"}
authors = [
    {name = "Santhosh T", email = ""},
]
maintainers = [
    {name = "Santhosh T", email = ""},
]
keywords = [
    "voice-over",
    "dubbing",
    "ai-voice",
    "content-creator",
    "console",
    "cli",
    "terminal",
    "ffmpeg",
    "text-to-speech",
    "tts",
    "edge-tts",
    "subtitles",
    "subtitle-styling",
    "video-dubbing",
    "anonymous-voice",
    "privacy",
    "social-media",
    "youtube",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "textual",
    "rich",
    "aiohttp",
    "edge-tts",
    "mutagen",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "python-dotenv",
    "loguru",
    "requests",
    "inquirer",
    "pygame",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "isort",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/san-gitlogin/termivoxed"
Repository = "https://github.com/san-gitlogin/termivoxed"
Documentation = "https://github.com/san-gitlogin/termivoxed#readme"
"Bug Tracker" = "https://github.com/san-gitlogin/termivoxed/issues"

[project.scripts]
termivoxed = "main:main"
tvx = "main:main"

[tool.setuptools]
packages = ["backend", "core", "models", "utils", "ui"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.env.example"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
